import { readFileSync } from "fs";
import { ReadCode } from "@shared/types/read-codes";
import { AudioPacket } from "@shared/types/audio-transfer";
import {
  HeaderObject,
  OpusFileSplitter,
  Page,
} from "./thirdparty/opus-file-splitter/src/opus-file-splitter.mjs";

export class OpusReader {
  #fileSplitter: OpusFileSplitter;
  #headerObject: HeaderObject;
  #startTime: number;
  #pages: Array<Page>;
  #numberOfPages: number;
  #minPagesForChunk: number;
  #totalDurationSeconds: number;
  #positions: Array<number>;

  constructor(file: string) {
    this.#fileSplitter = new OpusFileSplitter(readFileSync(file).buffer);
    this.#headerObject = this.#fileSplitter.headerObject;
    this.#startTime = Date.now();
    this.#pages = this.#fileSplitter.pages;
    this.#numberOfPages = this.#pages.length;
    this.#minPagesForChunk = this.calculateMinPages(
      globalThis.settings.chunkDuration,
      this.#headerObject.audioPageSize,
    );
    this.#totalDurationSeconds = this.#fileSplitter.calculateDurationSeconds(
      BigInt(this.#headerObject.preskipGranule),
      this.#headerObject.PCMLength,
    );

    this.#positions = this.#pages.flatMap((p) => Number(p.position));
  }

  startClock() {
    this.#startTime = Date.now();
  }

  getClock() {
    return this.#startTime;
  }

  setClock(time: number) {
    this.#startTime = time;
  }

  getCurrentTimeMillis() {
    return Date.now() - this.#startTime;
  }

  getRemainingTimeSeconds() {
    return this.#totalDurationSeconds - this.getCurrentTimeMillis() / 1000;
  }

  getPlayTimeSeconds() {
    return (Date.now() - this.#startTime) / 1000;
  }

  getCurrentPage() {
    return this.bytesToPage(this.getPlayTimeSeconds() * 48000);
  }

  calculateRangeDuration(pageStart: number, pageEnd: number) {
    if (
      pageStart < 0 ||
      pageEnd < 0 ||
      pageStart >= this.#numberOfPages ||
      pageEnd >= this.#numberOfPages
    )
      return 0;

    return this.#fileSplitter.calculateDurationSeconds(
      this.#pages[pageStart].position,
      this.#pages[pageEnd].position,
    );
  }

  calculateMinPages(minDuration: number, pageDuration: number) {
    return Math.max(Math.floor(minDuration / pageDuration), 1);
  }

  #binarySearch(arr: number[], target: number): number {
    let low = 0;
    let high = arr.length - 1;

    while (low <= high) {
      const mid = Math.floor((low + high) / 2);

      if (arr[mid] === target) {
        return mid;
      } else if (arr[mid] < target) {
        low = mid + 1;
      } else {
        high = mid - 1;
      }
    }
    return low;
  }

  bytesToPage(position: number) {
    return this.#binarySearch(this.#positions, position);
  }

  getPageRangeEnd(pageStart: number) {
    return Math.min(pageStart + this.#minPagesForChunk, this.#numberOfPages);
  }

  makeChunkFromRange(start: number, end: number) {
    const chunks = this.#fileSplitter.sliceByPage(start, end);
    if (chunks !== null) {
      const packet: AudioPacket = {
        Buffer: chunks,
        PageStart: start,
        PageEnd: end,
        ChunkPlayPosition: this.#headerObject.audioPageSize * start,
        TotalDuration: this.#totalDurationSeconds,
        ServerTime: this.getCurrentTimeMillis(),
      };
      return packet;
    } else {
      return null;
    }
  }

  getCurrentChunk() {
    const pageStart = this.getCurrentPage();
    const pageEnd = this.getPageRangeEnd(pageStart);
    if (pageStart == pageEnd) return { data: null, status: ReadCode.EOF };
    return {
      data: this.makeChunkFromRange(pageStart, pageEnd),
      status: ReadCode.CONTINUATION,
    };
  }

  getNextChunk(pageStart: number) {
    const currentPage = this.getCurrentPage();
    const pageEnd = this.getPageRangeEnd(pageStart);
    if (pageStart == pageEnd) return { data: null, status: ReadCode.EOF };

    console.log(
      "more data requested! %d, %d, %d",
      currentPage,
      pageStart,
      this.#numberOfPages - 1,
    );
    if (pageStart > this.#numberOfPages || pageEnd > this.#numberOfPages)
      return { data: null, status: ReadCode.EOF };
    if (
      this.calculateRangeDuration(currentPage, pageStart) >
      globalThis.settings.maxSecondsLoadAhead
    )
      return { data: null, status: ReadCode.INVALID };

    return {
      data: this.makeChunkFromRange(pageStart, pageEnd),
      status: ReadCode.CONTINUATION,
    };
  }
}
